# ego

./: .eslintrc.json  .gitignore  .prettierrc  .swcrc  LICENSE  README.md  ci_network.json  default_network.json  dfx.json  ego-config.json  ego-projects.json  egoconfig.json  jest.config.js  package.json  script.sh  topup.sh  tsconfig.json
canisters/: Cargo.toml
canisters/infra/ego_assets/actor/: Cargo.toml
canisters/infra/ego_assets/actor/src/: actor.rs  main.rs
canisters/infra/ego_assets/mod/: Cargo.toml
canisters/infra/ego_assets/mod/src/: rc_bytes.rs  state.rs  state_machine.rs  types.rs  url_decode.rs
canisters/infra/ego_dev/actor/: Cargo.toml
canisters/infra/ego_dev/actor/src/: actor.rs  main.rs
canisters/infra/ego_dev/mod/: Cargo.toml
canisters/infra/ego_dev/mod/src/: app.rs  backup.rs  developer.rs  ego_dev.rs  ego_file.rs  memory.rs  mod.rs  service.rs  state.rs  types.rs
canisters/infra/ego_dev/mod/tests/: app_version_test.rs  backup_test.rs  developer_test.rs  ego_dev_app_test.rs  file_test.rs  service_test.rs  stable_state_test.rs  state_test.rs
canisters/infra/ego_file/actor/: Cargo.toml
canisters/infra/ego_file/actor/src/: actor.rs  main.rs
canisters/infra/ego_file/mod/: Cargo.toml
canisters/infra/ego_file/mod/src/: file.rs  mod.rs  service.rs  state.rs  storage.rs  types.rs
canisters/infra/ego_ledger/actor/: Cargo.toml
canisters/infra/ego_ledger/actor/src/: actor.rs  main.rs
canisters/infra/ego_ledger/mod/: Cargo.toml
canisters/infra/ego_ledger/mod/src/: ego_ledger.rs  payment.rs  service.rs  state.rs  types.rs
canisters/infra/ego_ledger/mod/tests/: service_test.rs
canisters/infra/ego_ops/actor/: Cargo.toml
canisters/infra/ego_ops/actor/src/: actor.rs  main.rs
canisters/infra/ego_ops/mod/: Cargo.toml
canisters/infra/ego_ops/mod/src/: ego_ops.rs  mod.rs  service.rs  state.rs  types.rs
canisters/infra/ego_record/actor/: Cargo.toml
canisters/infra/ego_record/actor/src/: actor.rs  main.rs
canisters/infra/ego_record/mod/: Cargo.toml
canisters/infra/ego_record/mod/src/: mod.rs  record.rs  service.rs  state.rs
canisters/infra/ego_record/mod/tests/: service_test.rs
canisters/infra/ego_store/actor/: Cargo.toml
canisters/infra/ego_store/actor/src/: actor.rs  main.rs
canisters/infra/ego_store/mod/: Cargo.toml
canisters/infra/ego_store/mod/src/: app.rs  backup.rs  memory.rs  mod.rs  order.rs  service.rs  state.rs  store.rs  tenant.rs  types.rs  wallet.rs  wallet_provider.rs
canisters/infra/ego_store/mod/tests/: backup_test.rs  cash_flow_test.rs  ego_dev_service_test.rs  ego_ledger_service_test.rs  ego_store_app_test.rs  ego_tenant_service_test.rs  order_test.rs  service_test.rs  stable_state_test.rs  state_test.rs  tenant_test.rs  user_app_test.rs  wallet_provider_service_test.rs  wallet_provider_test.rs  wallet_test.rs
canisters/infra/ego_tenant/: dfx.sh
canisters/infra/ego_tenant/actor/: Cargo.toml
canisters/infra/ego_tenant/actor/src/: actor.rs  main.rs
canisters/infra/ego_tenant/mod/: Cargo.toml
canisters/infra/ego_tenant/mod/src/: backup.rs  memory.rs  mod.rs  service.rs  state.rs  task.rs  tenant.rs  types.rs
canisters/infra/ego_tenant/mod/tests/: backup_test.rs  service_test.rs  stable_state_test.rs  state_test.rs  task_test.rs  track_service_test.rs
canisters/lib/ego_inner_rpc/: Cargo.toml
canisters/lib/ego_inner_rpc/src/: ego_record.rs  lib.rs
canisters/lib/ego_lib/: Cargo.toml
canisters/lib/ego_lib/src/: ego_canister.rs  ego_store.rs  ego_tenant.rs  ic_management.rs  lib.rs  unit_test_macro.rs
canisters/lib/ego_macros/: Cargo.toml
canisters/lib/ego_macros/src/: actor_macro.rs  lib.rs  mod_macro.rs
canisters/lib/ego_macros/tests/: app_info_test.rs
canisters/lib/ego_types/: Cargo.toml
canisters/lib/ego_types/src/: app.rs  app_info.rs  cycle_info.rs  lib.rs  log.rs  registry.rs  seq.rs  types.rs  user.rs
canisters/lib/ego_types/tests/: seq_test.rs  user_test.rs
canisters/lib/ego_utils/: Cargo.toml
canisters/lib/ego_utils/src/: ic_management.rs  lib.rs  util.rs
configs/: aws.json  (+29 more)
ego/: Cargo.toml
ego/infra/ego_assets/actor/: Cargo.toml
ego/infra/ego_assets/actor/src/: lib.rs  main.rs
ego/infra/ego_assets/mod/: Cargo.toml
ego/infra/ego_assets/mod/src/: mod.rs  rc_bytes.rs  state.rs  state_machine.rs
ego/infra/ego_cron/: dfx.sh
ego/infra/ego_cron/actor/: Cargo.toml
ego/infra/ego_cron/mod/: Cargo.toml
ego/infra/ego_dev/: dfx.sh
ego/infra/ego_dev/actor/: Cargo.toml
ego/infra/ego_dev/mod/: Cargo.toml
ego/infra/ego_file/actor/: Cargo.toml
ego/infra/ego_file/mod/: Cargo.toml
ego/infra/ego_ledger/actor/: Cargo.toml
ego/infra/ego_ledger/mod/: Cargo.toml
ego/infra/ego_log/actor/: Cargo.toml
ego/infra/ego_log/mod/: Cargo.toml
ego/infra/ego_ops/actor/: Cargo.toml
ego/infra/ego_ops/mod/: Cargo.toml
ego/infra/ego_record/actor/: Cargo.toml
ego/infra/ego_record/mod/: Cargo.toml
ego/infra/ego_store/: dfx.sh
ego/infra/ego_store/actor/: Cargo.toml
ego/infra/ego_store/mod/: Cargo.toml
ego/infra/ego_tenant/actor/: Cargo.toml
ego/infra/ego_tenant/mod/: Cargo.toml
ego/lib/ego_inner_rpc/: Cargo.toml
ego/lib/ego_inner_rpc/src/: ego_record.rs  lib.rs  types.rs
ego/lib/ego_lib/: Cargo.toml
ego/lib/ego_lib/src/: ego_canister.rs  ego_store.rs  ego_tenant.rs  ic_management.rs  lib.rs  unit_test_macro.rs
ego/lib/ego_macros/: Cargo.toml
ego/lib/ego_macros/src/: actor_macro.rs  cycle_macro.rs  ego_log.rs  ego_macro.rs  log_macro.rs  mod.rs  mod_macro.rs
ego/lib/ego_macros/tests/: app_info_test.rs
ego/lib/ego_registry/: Cargo.toml
ego/lib/ego_registry/src/: mod.rs  registry.rs  registry_macro.rs
ego/lib/ego_roles/: Cargo.toml
ego/lib/ego_roles/src/: mod.rs  owner.rs
ego/lib/ego_types/: Cargo.toml
ego/lib/ego_types/src/: app.rs  app_info.rs  cycle_info.rs  ego_error.rs  lib.rs  log.rs  user.rs  version.rs
ego/lib/ego_users/: Cargo.toml
ego/lib/ego_users/src/: mod.rs  user.rs  user_macro.rs  users.rs
ego/lib/ego_utils/: Cargo.toml
ego/lib/ego_utils/src/: consts.rs  ic_management.rs  lib.rs  log.rs  management.rs  types.rs
(+422 files in other folders)
