[workspace]
members = [
    "infra/ego_ledger/actor",
    "infra/ego_ledger/mod",
    "infra/ego_ops/actor",
    "infra/ego_ops/mod",
    "infra/ego_store/actor",
    "infra/ego_store/mod",
    "infra/ego_file/actor",
    "infra/ego_file/mod",
    "infra/ego_tenant/actor",
    "infra/ego_tenant/mod",
    "infra/ego_dev/actor",
    "infra/ego_dev/mod",
    "infra/ego_record/actor",
    "infra/ego_record/mod",
    "lib/ego_utils",
    "lib/ego_types",
    "lib/ego_macros",
    "lib/ego_lib",
    "lib/ego_inner_rpc"
]

[workspace.dependencies]
candid = "0.9.2"
ic-cdk = { version = "0.10.0" }
ic-cdk-timers = "0.4.0"
ic-cdk-macros = "0.7.0"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
ic-ledger-types = "0.7.0"
ic-stable-structures = "0.5.4"
ciborium = "0.2.1"

ego_types = { path = "lib/ego_types" }
ego_macros = { path = "lib/ego_macros" }
ego_lib = { path = "lib/ego_lib" }
ego_utils = { path = "lib/ego_utils" }
ego_inner_rpc = { path ="lib/ego_inner_rpc" }
ego_backup = {path="../../astrox-rs/ego_backup"}

async-trait = "0.1.57"

md5 = "0.7.0"
rand = "0.8.5"
getrandom = { version = "0.2.7", features = ["js"] }

hex = "0.4.3"
hex-literal = "0.4.1"
itertools = "0.11.0"

mockall = "0.11.2"
tokio = { version = "1.21.0", features = ["full"] }

[profile.release]
lto = true
opt-level = 'z'