[workspace]
members = [
    "infra/ego_assets/actor",
    "infra/ego_assets/mod",
    "infra/ego_store/actor",
    "infra/ego_store/mod",
#    "infra/ego_cron/actor",
#    "infra/ego_cron/mod",
    "infra/ego_file/actor",
    "infra/ego_file/mod",
    "infra/ego_tenant/actor",
    "infra/ego_tenant/mod",
    "infra/ego_dev/actor",
    "infra/ego_dev/mod",
    "lib/ego_utils",
    "lib/ego_users",
]

[profile.release]
lto = true
opt-level = 'z'