[package]
name = "ego_inner_rpc"
version = "0.3.12"
edition = "2021"
license = "MIT"
description = "lib for calling ego store, ego canister"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
async-trait = { workspace = true }
ego_types = { workspace = true }