[package]
name = "ego_macros"
version = "0.2.6"
edition = "2021"
license = "MIT"
description = "ego's macro to inject function into mod and actor"

[lib]
path = "src/lib.rs"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
ego_types = { workspace = true }