[package]
name = "ego_types"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "ego's base type system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
md5 = { workspace = true }

[features]
test_mode = []