[package]
name = "ego_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
candid = "0.7.10"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
ic-types = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
tracing = "0.1.29"

ego_types = { path = "../ego_types"}