[package]
name = "ego_assets"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ego-assets"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }

ego_assets_mod = { path = "../mod" }
