[package]
name = "ego_assets_mod"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"


[lib]
path = "src/mod.rs"

[dependencies]
base64 = "0.13"
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-certified-map = "0.3.0"
hex = { workspace = true }
hex-literal = { workspace = true }
itertools = { workspace = true }
num-traits = "0.2.14"
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
sha2 = "0.9.1"
