[package]
name = "ego_file"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ego-file"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ego_types = { workspace = true }
ego_macros = { workspace = true }
ego_lib = { workspace = true }

ego_file_mod = { path = "../mod" }