[package]
name = "ego_record"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ego-record"
path = "src/main.rs"

[dependencies]
candid =  { workspace = true }
ic-cdk =  { workspace = true }
ic-cdk-macros =  { workspace = true }
serde =  { workspace = true }
serde_json =  { workspace = true }
serde_bytes =  { workspace = true }
ic-ledger-types =  { workspace = true }
ego_types =  { workspace = true }
ego_macros =  { workspace = true }
ego_lib =  { workspace = true }

ego_record_mod = { path = "../mod" }

[dev-dependencies]
mockall = "0.11.2"
tokio = { version = "1.21.0", features = ["full"] }