[package]
name = "ego_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ego-store"
path = "src/main.rs"

[dependencies]
candid =  { workspace = true }
ic-cdk =  { workspace = true }
ic-cdk-macros =  { workspace = true }
serde =  { workspace = true }
serde_json =  { workspace = true }
serde_bytes =  { workspace = true }
ic-ledger-types =  { workspace = true }
ego_types =  { workspace = true }
ego_macros =  { workspace = true }
ego_lib =  { workspace = true }

ego_store_mod = { path = "../mod" }

ego_inner_rpc = { workspace = true }
