[package]
name = "ego_store_mod"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/mod.rs"


[dependencies]
candid = "0.8.4"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.8"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
ic-ledger-types = "0.4.2"
async-trait = "0.1.57"
ego_types = { path = "../../../lib/ego_types" }
ego_macros = { path = "../../../lib/ego_macros" }
ego_lib = { path = "../../../lib/ego_lib" }

ic-stable-structures = "0.5.4"
ciborium = "0.2.1"

[dev-dependencies]
mockall = "0.11.2"
tokio = { version = "1.21.0", features = ["full"] }

[features]
test_mode = ["ego_types/test_mode"]