[package]
name = "ego_tenant_mod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/mod.rs"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ic-ledger-types = { workspace = true }
ego_types = { workspace = true }
ego_macros = { workspace = true }
ego_lib = { workspace = true }
ego_backup = { workspace = true }

ic-stable-structures = { workspace = true }
ciborium = { workspace = true }

async-trait = { workspace = true }
ego_utils = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }