[package]
name = "ego_assets_mod"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"


[lib]
path = "src/mod.rs"

[dependencies]
base64 = "0.13"
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
ic-certified-map = "0.3.0"
hex = "0.4.3"
hex-literal = "0.3.4"
itertools = "0.10.3"
num-traits = "0.2.14"
serde = "1.0.136"
serde_json = "1.0.79"
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"
serde_with = "1.12.0"
sha2 = "0.9.1"
ego_utils = { path = "../../../lib/ego_utils" }
