[package]
name = "ego_cron_mod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/mod.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
ic-certified-map = "0.3.0"
hex = "0.4.3"
hex-literal = "0.3.4"
itertools = "0.10.3"
serde = "1.0.136"
serde_json = "1.0.79"
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"
serde_with = "1.12.0"
ego_types = { path = "../../../lib/ego_types"}
ic-cron = "0.7.1"

[dev-dependencies]
mockall = "0.11.2"
tokio = {version="1.21.0", features=["full"]}