[package]
name = "ego_dev_mod"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/mod.rs"


[dependencies]
candid = "0.7.10"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
ic-types = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
ic-ledger-types = "0.1.2"
md5 = "0.7.0"
async-trait = "0.1.57"
ego_types = { path = "../../../lib/ego_types"}

[dev-dependencies]
mockall = "0.11.2"
tokio = {version="1.21.0", features=["full"]}