[package]
name = "ego_file"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ego-file"
path = "src/main.rs"

[dependencies]
candid = "0.7.10"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
ic-types = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
ego_file_mod = {path = "../mod"}
ego_utils = { path = "../../../lib/ego_utils" }
ego_users = { path = "../../../lib/ego_users" }

