[package]
name = "ego_file"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ego-file"
path = "src/main.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
ego_file_mod = { path = "../mod" }
ego_types = { path = "../../../lib/ego_types" }
