[package]
name = "ego_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ego-ledger"
path = "src/main.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = { version = "0.6.8", features = ["timers"] }
ic-cdk-macros = "0.6.8"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
ic-ledger-types = "0.2.0"
ego_ledger_mod = { path = "../mod" }
ego_types = { path = "../../../lib/ego_types" }
