[package]
name = "ego_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ego-log"
path = "src/main.rs"

[dependencies]
candid = "0.7.10"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
ic-types = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
ego_log_mod = { path = "../mod" }
ego_users = { path = "../../../lib/ego_users" }
ego_macros = { path = "../../../lib/ego_macros" }